fix spacing of upload section

--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@ main {
 }
 
 .upload p {
-  margin: 1rem 0;
+  margin: 1rem 0 0;
 }
 
 /**
